# zando_apps

./: README.md  pyproject.toml  schema.prisma  setup.py
src/: __main__.py  imports.py
src/cogs/: commands.py  events.py  help.py  mod.py
src/utils/: __init__.py  util.py
src/utils/resources/: __init__.py
src/utils/tools/: EasySqlite.py  __init__.py  test.py
src/utils/tools/jsons/: id_data.json  quest_ans.json
zando/: __main__.py  imports.py
zando/cogs/: ai.py  application.py  commands.py  events.py  handlers.py  help.py  logging.py
zando/extentsions/: __init__.py  callback.py  modals.py  selects.py  views.py
zando/models/: callback.py  views.py
zando/utils/: __init__.py  callback.py  config.py  errors.py  extentsions.py  util.py
